2003-11-26  Alexander Malysh  <a.malysh@centrium.de>
    * gwlib/http.c: fixed memory leak if conn_wrap_fd(...) failed due to unsuccessfull
      SSL handshake.

2003-11-26  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/smsc/smpp_pdu.def: added missing esm_class values for deliver_sm PDU.
 
2003-11-26  Stipe Tolj  <tolj@wapme-systems.de>
    * doc/userguide/userguide.xml: added HTTP SMSC type 'wapme'.
    * gw/smsc/smsc_http.c: harmonizing kannel_receive_sms() to behave the same
      way as smsbox's sendsms interface. We run into code duplication here.
      Have to think on how this can be done better, in sense of modularization.
      Added Wapme SMS Proxy type 'wapme' as HTTP content/SMS gateway interface.

2003-11-26  Stipe Tolj  <tolj@wapme-systems.de>
    * gwlib/cfg.def: added 'access-log-time' and 'access-log-clean' directives
      to smsbox and wapbox groups. Thanks to Alex Kinch for reporting this.

2003-11-24  Stipe Tolj  <tolj@wapme-systems.de>
    * doc/userguide/userguide.xml: added new config directives 'access-log-clean'
      and 'access-log-format'.
    * gw/bb_alog.c: handles the custom bearerbox access-log formating
    * gw/bb_smscconn.c: moved log_sms() to gw/bb_alog.c:bb_alog_sms()
    * gw/bearerbox.h: added bb_alog_ prototypes
    * gw/[sms|wap]box.c: harmonized access-log config directive reading
    * gwlib/accesslog.[ch]: alog_open() changed to indicate if markers
      should be written to access-log file. If no markers are set, then the
      default timestamp prefix is not written, allowing users to
      individually set the timestamp in their custom access-log format.
    * gwlib/cfg.def: added config directives 'access-log-time' to
      indicate if localtime or gmt should be used within access-log,
      'access-log-format' holding the escape code formated line to log,
      'access-log-clean' (boolean) indicating if standard markers shoould be
      avoided and hence the access-log should be "clean".
