@@ -1,3 +1,7 @@
+2003-11-27  Alexander Malysh  <a.malysh@centrium.de>
+    * gwlib/accesslog.c: fixed compiler warning about zero-length format string.
+      Got rid of buffer allocation, just allocate on the stack.
+
 2003-11-26  Alexander Malysh  <a.malysh@centrium.de>
     * gwlib/http.c: fixed memory leak if conn_wrap_fd(...) failed due to unsuccessfull
       SSL handshake.
